20050619
Added examples/speedtest.rb

Added :nodelay option to tcpserver to set TCP_NODELAY socket option. This
removes 100ms of latency in responses.

Added :listen option to tcpserver to set listen queue size. With the default
of 5, and 100 children trying to connect, a few connections get dropped.

Added examples/rbslapd3.rb, a preforking LDAP server

20050618
Fix examples/rbslapd2.rb SQLPool so that it always puts connections back
into the pool (using 'ensure' this time :-)

Modify connection.rb to ensure no memory leak in the event of exceptions
being raised in operation threads.

20050616
RELEASE_0_1