@@ -24,10 +24,12 @@ class TestLdapUtil < Test::Unit::TestCase
 	[{"cn"=>"Before\rAfter"},{"o"=>"Test"},{"c"=>"GB"}],
 	LDAPserver::Operation.split_dn("CN=Before\\0DAfter,O=Test,C=GB")
     )
-    assert_equal(
-	[{"sn"=>"Lu\xc4\x8di\xc4\x87"}],
-	LDAPserver::Operation.split_dn("SN=Lu\\C4\\8Di\\C4\\87")
-    )
+    res = LDAPserver::Operation.split_dn("SN=Lu\\C4\\8Di\\C4\\87")
+    assert_equal([{"sn"=>"Lu\xc4\x8di\xc4\x87"}], res)
+
+    # Just for fun, let's try parsing it as UTF8
+    r = res[0]["sn"].scan(/./u)
+    assert_equal(["L", "u", "\xc4\x8d", "i", "\xc4\x87"], r)
   end
 
   def test_join_dn
