@@ -9,6 +9,8 @@ of 5, and 100 children trying to connect, a few connections get dropped.
 
 Added examples/rbslapd3.rb, a preforking LDAP server
 
+Tweak split_dn so that it should work properly with UTF-8 encoded strings
+
 20050618
 Fix examples/rbslapd2.rb SQLPool so that it always puts connections back
 into the pool (using 'ensure' this time :-)
